docker/kubernetes/kustomize/embed-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    app.novu.co/name: embed
  name: novu-embed-svc
  namespace: novu
spec:
  ports:
    - name: "4701"
      port: 4701
      targetPort: 4701
  selector:
    app.novu.co/name: embed
