docker/kubernetes/kustomize/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    app.novu.co/name: web
  name: novu-web-svc
  namespace: novu
spec:
  type: NodePort
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
      nodePort: 32001
  selector:
    app.novu.co/name: web
