docker/kubernetes/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novu-ingress
  namespace: novu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 0m # Don't limit body size, which is required for image push.
spec:
  rules:
    - host: novu.ci.kabaminc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novu-web-svc
                port:
                  number: 4200
